--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -254,31 +254,7 @@ iframe {
   filter: drop-shadow(0px -0.3px 3px rgba(0, 0, 0, 0.04));
 }
 
-::-webkit-scrollbar {
-  width: 12px !important; /* Width of the scrollbar */
-  height: 12px !important; /* Height of the scrollbar for horizontal scrolling */
-}
 
-::-webkit-scrollbar-track {
-  background: transparent; /* Background of the scrollbar track */
-  @apply dark:!bg-[#404040] !rounded-full;
-}
-
-::-webkit-scrollbar-thumb {
-  @apply dark:!bg-[#171717] !bg-gray-200;
-  border-radius: 1rem !important;
-  border: 3px solid transparent !important;
-  background-clip: content-box !important; 
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: rgba(0, 0, 0, 0.7) !important;
-  @apply dark:!bg-[#404040];
-}
-
-::-webkit-scrollbar-corner {
-  background: transparent !important;
-}
 
 /* Default color for everything */
 * {
@@ -288,6 +264,46 @@ iframe {
   @apply !antialiased;
 }
 
+* {
+    scrollbar-color: #D3D1CB rgba(0, 0, 0, 0);
+}
+
 ul[data-type="taskList"] li[data-checked="true"] div {
   opacity: 0.7;
+}
+
+.ProseMirror-bm-placeholder::before {
+  @apply !text-[18px] !text-[#acaba9] font-normal relative right-1 border-[#c6c6c4] rounded-lg  py-1 opacity-70;
+}
+
+.ProseMirror-bm{
+  @apply !flex flex-col !px-1 !py-1;
+}
+
+.ProseMirror-bm-button{
+  @apply hover:bg-[#f3f3f3] !rounded-[10px] 
+}
+
+.ProseMirror-bm-button-name{
+   @apply !text-[16.5px] text-[#32302c];
+   font-family: 'Inter', sans-serif;
+}
+
+.ProseMirror-bm{
+    border-radius: 14px !important;
+    background: white !important;
+    backdrop-filter: none !important;
+    position: relative !important;
+    max-width: calc(-24px + 100vw) !important;
+    max-height: 200px !important;
+    box-shadow: rgba(0, 0, 0, 0.1) 2px 2px 10px -3px, rgba(0, 0, 0, 0.06) 0px 0px 0px 0px, rgba(84, 72, 49, 0.08) 0px 0px 0px 0px !important;
+}
+
+* {
+    box-sizing: border-box;
+    isolation: isolate;
+}
+
+.ProseMirror-bm-button-shortcut{
+  @apply !text-[17px] text-[#32302c];
 }
